@@ -1727,6 +1727,7 @@ $self->{texts} = {
   'If enabled purchase and sales records cannot be saved if no transaction description has been entered.' => '',
   'If enabled sales invoices created using OpenDocument/OASIS format will include data for Swiss QR-Bill creation.' => '',
   'If enabled the record links view starts always from the sales order including all sublevels' => '',
+  'If enabled, when saving parts the partsgroup must be not be empty.' => '',
   'If item not found, allow creation of new item' => '',
   'If left empty the default sender from the kivitendo configuration will be used (key \'email_from\' in section \'periodic_invoices\'; current value: #1).' => '',
   'If missing then the start date will be used.' => '',
@@ -2442,6 +2443,7 @@ $self->{texts} = {
   'Partsgroup'                  => '',
   'Partsgroup (database ID)'    => '',
   'Partsgroup (name)'           => '',
+  'Partsgroup is required for parts' => '',
   'Partsgroups'                 => '',
   'Partsgroups where variables are shown' => '',
   'Password'                    => '',
@@ -3613,6 +3615,7 @@ $self->{texts} = {
   'The parts for this delivery order have already been transferred out.' => '',
   'The parts have been removed.' => '',
   'The parts have been transferred.' => '',
+  'The partsgroup is missing.'  => '',
   'The password is too long (maximum length: #1).' => '',
   'The password is too short (minimum length: #1).' => '',
   'The password is weak (e.g. it can be found in a dictionary).' => '',
